Fix: Adjust alignment

--- a/src/styles/components/_c-benefit-bar.scss
+++ b/src/styles/components/_c-benefit-bar.scss
@@ -1,21 +1,20 @@
 .c-benefit-bar {
   background-color: var(--green-500);
 
-  & .c-container {
-    // @include flex-element(row, center, center);
-  }
-
   &__list {
     list-style: none;
     padding-top: rem(42px);
     padding-bottom: rem(42px);
+    text-align: center;
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: rem(24px);
 
     @include media-up(md) {
       flex-direction: row;
       justify-content: center;
+      gap: rem(42px);
     }
   }
 
@@ -23,15 +22,5 @@
     font-size: rem(20px);
     font-weight: bold;
     text-transform: uppercase;
-
-    & + .c-benefit-bar__item {
-      margin-top: rem(24px);
-      margin-left: 0;
-
-      @include media-up(md) {
-        margin-top: 0;
-        margin-left: rem(42px);
-      }
-    }
   }
 }
